--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 </head>
 <body>
 
+<style>
+    body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+  </style>
+  
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
