--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p {
   </style>
   
 <h1>This is a Heading</h1>
-    <img src="rosaparks.jpg" alt="Rosa Parks">
+    <img src="rosaparks.jpg.jpg" alt="Rosa Parks">
 
 <p>This is a paragraph.</p>
 
