--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 }
 
 h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
 p {
-  font-family: verdana;
-  font-size: 20px;
+  font-family: Hedvig Letters Serif;
+  font-size: 40px;
 }
   </style>
   
