--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Rosa Parks</title>
 </head>
 <body>
 
@@ -10,15 +10,23 @@
   background-color: brown;
 }
 
+    
 h1 {
   color: black;
   text-align: center;
 }
 
+    
 p {
   font-family: Hedvig Letters Serif;
   font-size: 40px;
 }
+
+img {
+  width: 50%;
+  height: auto;
+}
+
   </style>
   
 <h1>This is a Heading</h1>
