--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <style>
     body {
-  background-color: brown;
+  background-color: lightbrown;
 }
 
     
 h1 {
-  color: black;
+  color: white;
   text-align: center;
 }
 
