--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@ img {
 <h1>This is a Heading</h1>
     <img src="rosaparks.jpg" alt="Rosa Parks">
 
-<p>This is a paragraph.</p>
+<p>Rosa Parks, often hailed as the "Mother of the Civil Rights Movement," made an indelible mark on American history through her quiet act of defiance. On December 1, 1955, in Montgomery, Alabama, Parks, a seamstress and NAACP activist, refused to give up her seat to a white passenger on a segregated bus. Her courageous act was not the first of its kind, but it sparked a pivotal moment in the fight against racial segregation in the United States. Parks' dignified refusal to obey unjust laws ignited the Montgomery Bus Boycott, a pivotal year-long protest led by Martin Luther King Jr. that challenged segregation laws and catapulted the Civil Rights Movement onto the national stage.
 
+</p>
+<br>
+<br>
+<p>Beyond her iconic role in the bus boycott, Rosa Parks was a lifelong advocate for civil rights and social justice. Her activism extended far beyond that single act of resistance. Parks worked tirelessly, dedicating her life to fighting against discrimination, inequality, and injustice. Her commitment to the cause of equality continued for decades, advocating for voter registration, education, and fair housing. Parks' unwavering determination and bravery in the face of adversity inspired countless individuals and left an enduring legacy that continues to influence social justice movements worldwide.
+
+</p>
+<br>
+<br>
+<p>Rosa Parks' significance transcends the singular act of refusing to give up her seat. Her courageous stand became a symbol of resistance against racial injustice and a catalyst for change. Her legacy serves as a reminder of the power of individual action in the pursuit of equality, inspiring generations to stand up against oppression and work towards a more just and equitable society.
+
+</p>
+    
 </body>
 </html>
