--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     
 h1 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
@@ -29,10 +29,11 @@ img {
 
   </style>
   
-<h1>This is a Heading</h1>
-    <img src="rosaparks.jpg" alt="Rosa Parks">
+<h1>About Rosa Parks</h1>
 
-<p>Rosa Parks, often hailed as the "Mother of the Civil Rights Movement," made an indelible mark on American history through her quiet act of defiance. On December 1, 1955, in Montgomery, Alabama, Parks, a seamstress and NAACP activist, refused to give up her seat to a white passenger on a segregated bus. Her courageous act was not the first of its kind, but it sparked a pivotal moment in the fight against racial segregation in the United States. Parks' dignified refusal to obey unjust laws ignited the Montgomery Bus Boycott, a pivotal year-long protest led by Martin Luther King Jr. that challenged segregation laws and catapulted the Civil Rights Movement onto the national stage.
+<img src="rosaparks.jpg" alt="Rosa Parks">
+
+<p><b>Rosa Parks</b>, often hailed as the "Mother of the Civil Rights Movement," made an indelible mark on American history through her quiet act of defiance. On December 1, 1955, in Montgomery, Alabama, Parks, a seamstress and NAACP activist, refused to give up her seat to a white passenger on a segregated bus. Her courageous act was not the first of its kind, but it sparked a pivotal moment in the fight against racial segregation in the United States. Parks' dignified refusal to obey unjust laws ignited the Montgomery Bus Boycott, a pivotal year-long protest led by Martin Luther King Jr. that challenged segregation laws and catapulted the Civil Rights Movement onto the national stage.
 
 </p>
 <br>
