--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@ img {
 </p>
 <br>
 <br>
-<p>Beyond her iconic role in the bus boycott, Rosa Parks was a lifelong advocate for civil rights and social justice. Her activism extended far beyond that single act of resistance. Parks worked tirelessly, dedicating her life to fighting against discrimination, inequality, and injustice. Her commitment to the cause of equality continued for decades, advocating for voter registration, education, and fair housing. Parks' unwavering determination and bravery in the face of adversity inspired countless individuals and left an enduring legacy that continues to influence social justice movements worldwide.
+<p>Beyond her iconic role in the bus boycott, Rosa Parks was a lifelong advocate for civil rights and social justice. Her activism extended far beyond that single act of resistance. Parks worked tirelessly, dedicating her life to fighting against <i>discrimination, inequality, and injustice</i>. Her commitment to the cause of equality continued for decades, advocating for voter registration, education, and fair housing. Parks' unwavering determination and bravery in the face of adversity inspired countless individuals and left an enduring legacy that continues to influence social justice movements worldwide.
 
 </p>
 <br>
 <br>
-<p>Rosa Parks' significance transcends the singular act of refusing to give up her seat. Her courageous stand became a symbol of resistance against racial injustice and a catalyst for change. Her legacy serves as a reminder of the power of individual action in the pursuit of equality, inspiring generations to stand up against oppression and work towards a more just and equitable society.
+<p>Rosa Parks' significance goes beyond the singular act of refusing to give up her seat. Her courageous stand became a symbol of resistance against racial injustice and a catalyst for change. Her legacy serves as a reminder of the power of individual action in the pursuit of equality, inspiring generations to stand up against oppression and work towards a more just and equitable society.
 
 </p>
+<p>Below are some links to popular websites regarding Rosa Parks.</p>
     
 </body>
 </html>
