--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@ img {
 <br>
 
     <p>Below are some links to popular websites regarding Rosa Parks.</p>
+
+<ul>
+<li><a href="https://www.loc.gov/collections/rosa-parks-papers/about-this-collection">Library of Congress - Rosa Parks</a>
+</li>
+<li><a href="https://www.archives.gov/education/lessons/rosa-parks">National Archieves - Rosa Parks</a>
+</li>
     
+</ul>
 </body>
 </html>
