--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ img {
 </li>
 <li><a href="https://www.archives.gov/education/lessons/rosa-parks">National Archieves - Rosa Parks</a>
 </li>
+<li><a href="https://www.pbslearningmedia.org/resource/americon-vid-rosa-parks/video/">Short Video</a>
+</li>
     
 </ul>
 </body>
