--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ img {
 <br>
 <br>
 
-    <p>Below are some links to popular websites regarding Rosa Parks.</p>
+    <p>Below are some links to a few websites regarding Rosa Parks.</p>
 
 <ul>
 <li><a href="https://www.loc.gov/collections/rosa-parks-papers/about-this-collection">Library of Congress - Rosa Parks</a>
