--- a/index.html
+++ b/index.html
@@ -2,23 +2,15 @@
 <html>
 <head>
 <title>Rosa Parks</title>
-<link rel="stylesheet" href="index.css">
 </head>
 <body>
-
 <style>
-    body {
+  body {
   background-color: tan;
 }
 
-    
-h1 {
-  color: black;
+p{
   text-align: center;
-}
-
-    
-p {
   font-family: Hedvig Letters Serif;
   font-size: 25px;
 }
@@ -28,11 +20,21 @@ img {
   height: auto;
 }
 
-  </style>
-  
-<h1>About Rosa Parks</h1>
+h1 {
+  color: black;
+  text-align: center;
+}
 
-<img src="rosaparks.jpg" alt="Rosa Parks" style="position: absolute; margin-left: 10px;">
+li{
+  font-size: 25px;
+  margin-left: 350px;
+}
+
+</style>
+  
+<h1><u>About Rosa Parks</u></h1>
+
+<img src="rosaparks.jpg" alt="Rosa Parks" style="position: relative; margin-left: 280px;">
 
 <p><b>Rosa Parks</b>, often hailed as the <i>"Mother of the Civil Rights Movement,"</i> made an indelible mark on American history through her quiet act of defiance. On <b>December 1, 1955</b>, in Montgomery, Alabama, Parks, a seamstress and <b>NAACP activist</b>, refused to give up her seat to a white passenger on a segregated bus. Her courageous act was not the first of its kind, but it sparked a pivotal moment in the fight against racial segregation in the United States. Parks' dignified refusal to obey unjust laws ignited the <b>Montgomery Bus Boycott</b>, a pivotal year-long protest led by Martin Luther King Jr. that challenged segregation laws and catapulted the Civil Rights Movement onto the national stage.
 
